changing width to fix issue on firefox

--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -23,7 +23,7 @@ li {
 
 .pull-request-button {
   height: 40px;
-  width: 210.08px;
+  width: 215px;
 }
 
 .modal {
